--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ main{
     height: 80vh;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     background-color: #1F2833;
 }
@@ -41,6 +42,22 @@ footer{
     box-shadow: -1px -1px 10px black;
 }
 
+.d-flex{
+    display: flex;
+}
+
+.f-basis{
+    flex-basis: 33%;
+}
+
+.f-justify-center{
+    justify-content: center;
+}
+
+.f-end{
+    justify-content: flex-end;
+}
+
 #grid{
     display: flex;
     justify-content: center;
@@ -48,6 +65,20 @@ footer{
     flex-wrap: wrap;
     width: 35%;
     margin-inline: auto;
+}
+
+#score{
+    padding-bottom: 20px;
+    color: white;
+}
+
+#result{
+    color: red;
+}
+
+#difficulty{
+    margin-right: 20px;
+    padding: 0 10px;
 }
 
 .square{
