function gameover added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,10 @@ footer{
     background-color: red;
 }
 
+.gameover{
+    pointer-events: none;
+}
+
 .btn{
     font-size: 1.3rem;
     padding: 10px 20px;
